--- a/KnowItAll/HomePage.storyboard
+++ b/KnowItAll/HomePage.storyboard
@@ -38,7 +38,7 @@
                                             <rect key="frame" x="0.0" y="119" width="375" height="131"/>
                                             <subviews>
                                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="zRL-FX-lx3">
-                                                    <rect key="frame" x="30" y="83" width="314" height="29"/>
+                                                    <rect key="frame" x="31" y="95" width="314" height="29"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="28" id="RNz-9I-0OE"/>
                                                     </constraints>
@@ -48,7 +48,7 @@
                                                     </segments>
                                                 </segmentedControl>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Posts 📈" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aiI-tX-vYX">
-                                                    <rect key="frame" x="0.0" y="8" width="375" height="32"/>
+                                                    <rect key="frame" x="0.0" y="55" width="375" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="32" id="QS2-cT-M2t"/>
                                                     </constraints>
@@ -57,7 +57,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aRL-iM-VSZ">
-                                                    <rect key="frame" x="0.0" y="45" width="94" height="30"/>
+                                                    <rect key="frame" x="1" y="17" width="94" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="3yV-En-h7c"/>
                                                     </constraints>
@@ -67,7 +67,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g8h-3T-F7f">
-                                                    <rect key="frame" x="94" y="45" width="93.5" height="30"/>
+                                                    <rect key="frame" x="95" y="17" width="93.5" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="kEb-Zh-lT5"/>
                                                     </constraints>
@@ -77,7 +77,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qN8-bL-wIs">
-                                                    <rect key="frame" x="281.5" y="45" width="93.5" height="30"/>
+                                                    <rect key="frame" x="282" y="17" width="93.5" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="RbX-ud-3py"/>
                                                     </constraints>
@@ -87,7 +87,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JlR-Rq-rRN">
-                                                    <rect key="frame" x="187.5" y="45" width="94" height="30"/>
+                                                    <rect key="frame" x="188" y="17" width="94" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="cXU-Ut-6rY"/>
                                                     </constraints>
@@ -100,23 +100,23 @@
                                             <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="0.59764423076923079" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstItem="aiI-tX-vYX" firstAttribute="leading" secondItem="PuB-hs-SzC" secondAttribute="leading" id="078-Vk-arK"/>
-                                                <constraint firstItem="JlR-Rq-rRN" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="5" id="0lY-qj-1A1"/>
+                                                <constraint firstItem="JlR-Rq-rRN" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="-70" id="0lY-qj-1A1"/>
                                                 <constraint firstAttribute="trailing" secondItem="qN8-bL-wIs" secondAttribute="trailing" id="4iz-CI-HOu"/>
                                                 <constraint firstItem="JlR-Rq-rRN" firstAttribute="width" secondItem="aRL-iM-VSZ" secondAttribute="width" id="ECY-HG-sfC"/>
-                                                <constraint firstItem="aRL-iM-VSZ" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="5" id="Ibe-7b-2Pl"/>
-                                                <constraint firstItem="qN8-bL-wIs" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="5" id="RP9-Nj-1Jg"/>
-                                                <constraint firstAttribute="trailing" secondItem="zRL-FX-lx3" secondAttribute="trailing" constant="31" id="W6o-jd-aXQ"/>
+                                                <constraint firstItem="aRL-iM-VSZ" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="-70" id="Ibe-7b-2Pl"/>
+                                                <constraint firstItem="qN8-bL-wIs" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="-70" id="RP9-Nj-1Jg"/>
+                                                <constraint firstAttribute="trailing" secondItem="zRL-FX-lx3" secondAttribute="trailing" constant="30" id="W6o-jd-aXQ"/>
                                                 <constraint firstItem="qN8-bL-wIs" firstAttribute="width" secondItem="aRL-iM-VSZ" secondAttribute="width" id="Yoa-ox-rle"/>
                                                 <constraint firstAttribute="height" constant="131" id="ZkQ-rk-VnK"/>
-                                                <constraint firstItem="g8h-3T-F7f" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="5" id="bZL-tX-t48"/>
-                                                <constraint firstItem="aiI-tX-vYX" firstAttribute="top" secondItem="PuB-hs-SzC" secondAttribute="top" constant="8" id="bek-7j-NSp"/>
-                                                <constraint firstItem="aRL-iM-VSZ" firstAttribute="leading" secondItem="PuB-hs-SzC" secondAttribute="leading" id="gVW-DW-ukO"/>
+                                                <constraint firstItem="g8h-3T-F7f" firstAttribute="top" secondItem="aiI-tX-vYX" secondAttribute="bottom" constant="-70" id="bZL-tX-t48"/>
+                                                <constraint firstItem="aiI-tX-vYX" firstAttribute="top" secondItem="PuB-hs-SzC" secondAttribute="top" constant="55" id="bek-7j-NSp"/>
+                                                <constraint firstItem="aRL-iM-VSZ" firstAttribute="leading" secondItem="PuB-hs-SzC" secondAttribute="leading" constant="1" id="gVW-DW-ukO"/>
                                                 <constraint firstItem="g8h-3T-F7f" firstAttribute="width" secondItem="aRL-iM-VSZ" secondAttribute="width" id="hBr-LI-DPw"/>
                                                 <constraint firstItem="qN8-bL-wIs" firstAttribute="leading" secondItem="JlR-Rq-rRN" secondAttribute="trailing" id="lE9-eM-rmg"/>
-                                                <constraint firstItem="zRL-FX-lx3" firstAttribute="leading" secondItem="PuB-hs-SzC" secondAttribute="leading" constant="30" id="mli-L1-MZ2"/>
+                                                <constraint firstItem="zRL-FX-lx3" firstAttribute="leading" secondItem="PuB-hs-SzC" secondAttribute="leading" constant="31" id="mli-L1-MZ2"/>
                                                 <constraint firstItem="JlR-Rq-rRN" firstAttribute="leading" secondItem="g8h-3T-F7f" secondAttribute="trailing" id="npt-Bb-XRk"/>
                                                 <constraint firstItem="g8h-3T-F7f" firstAttribute="leading" secondItem="aRL-iM-VSZ" secondAttribute="trailing" id="tx8-qP-cxt"/>
-                                                <constraint firstAttribute="bottom" secondItem="zRL-FX-lx3" secondAttribute="bottom" constant="20" id="wnt-ir-18C"/>
+                                                <constraint firstAttribute="bottom" secondItem="zRL-FX-lx3" secondAttribute="bottom" constant="8" id="wnt-ir-18C"/>
                                                 <constraint firstAttribute="trailing" secondItem="aiI-tX-vYX" secondAttribute="trailing" id="z70-eg-ZvT"/>
                                             </constraints>
                                         </view>
